welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:12: error: illegal start of simple expression
	else if(!danse)){
                       ^